# office_ERP

./: .gitignore  AGENTS.md  README.md  azure-pipelines.yml  download_models.sh  fe-gitignore  instruction.md
be/: .env.example  .gitignore  Cargo.toml  README.md
be/migrations/: 20250101000000_initial.sql  20250102000000_hr_module.sql  20250103000000_rbac_system.sql  20250104000000_attendance_kiosk.sql  20250105_rbac_system.sql  20260106000000_add_user_module.sql
be/nvim/shada/: main.shada
be/src/: db.rs  errors.rs  lib.rs  main.rs  middleware.rs  routes.rs
be/src/api/: mod.rs
be/src/api/attendance/: dto.rs  handlers.rs  routes.rs  service.rs
be/src/api/auth/: dto.rs  email.rs  handlers.rs  jwt.rs  mod.rs  password.rs  routes.rs  service.rs
be/src/api/department/: dto.rs  handlers.rs  routes.rs  service.rs
be/src/api/employee/: dto.rs  handlers.rs  routes.rs  service.rs
be/src/api/home/: handlers.rs  routes.rs
be/src/api/intern/: dto.rs  handlers.rs  routes.rs  service.rs
be/src/api/leave/: dto.rs  handlers.rs  routes.rs  service.rs
be/src/api/navigation/: dto.rs  handlers.rs  routes.rs  service.rs
be/src/api/permissions/: dto.rs  handlers.rs  routes.rs  service.rs
be/src/api/person/: dto.rs  handlers.rs  mod.rs  routes.rs  service.rs
be/src/api/position/: dto.rs  handlers.rs  mod.rs  routes.rs  (+1 more)
be/src/middlewares/: auth.rs
be/src/models/: attendance.rs  department.rs  employee.rs  intern.rs  leave.rs  mod.rs  navigation_item.rs  person.rs  person_contact.rs  position.rs  refresh_token.rs  role_permission.rs  service_response.rs  user.rs
(+93 files in other folders)
